<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/app_setting">

        <ListPreference
            app:defaultValue="@string/f_degree"
            app:entries="@array/temperature_unit"
            app:entryValues="@array/temperature_unit"
            app:key="temperatureUnit"
            app:title="@string/temperature_unit_setting"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="sendNotification"
            android:title="@string/send_notification_setting" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/update_title">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="autoUpdate"
            app:title="@string/auto_update_setting" />

    </PreferenceCategory>

</PreferenceScreen>
