<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="qirui.hu.weatherapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/nav_location"
        android:name="qirui.hu.weatherapp.ui.location.LocationFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="qirui.hu.weatherapp.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/nav_about"
        android:name="qirui.hu.weatherapp.ui.about.aboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about" />
</navigation>